examples/test/testpolicy4835.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4835
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key6: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value45
          key29: value39
      podSelector:
        matchLabels:
          key26: value31
          key2: value28
          key8: value20
